--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,41 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.dh-box {
+  @apply bg-gray-200 drop-shadow-lg dark:bg-neutral-700 rounded;
+}
+
+.dh-input {
+  @apply block rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-accent sm:text-sm sm:leading-6 dark:bg-neutral-800/50 dark:placeholder:text-neutral-300 dark:text-neutral-200;
+}
+
+.dh-select .dh-select__control {
+  @apply bg-white dark:bg-neutral-800/50 rounded-md shadow-sm;
+}
+
+.dh-select .dh-select__control--is-focused {
+  @apply ring-2 ring-inset ring-accent border-none;
+}
+
+.dh-select__menu {
+  @apply bg-neutral-100 dark:bg-neutral-800 #{!important};
+}
+
+.dh-select__option {
+  @apply text-neutral-600 dark:text-neutral-200 bg-neutral-100 hover:bg-neutral-200 dark:bg-neutral-800 dark:hover:bg-neutral-800 #{!important};
+}
+
+.dh-select__option.dh-select__option--is-focused {
+  @apply text-white bg-accent hover:bg-neutral-200 dark:hover:bg-neutral-800 #{!important};
+}
+
+.dh-select .dh-select__indicator-separator {
+  @apply bg-neutral-400;
+}
+
+.dh-select .dh-select__input-container,
+.dh-select .dh-select__placeholder,
+.dh-select .dh-select__single-value {
+  @apply text-neutral-600 dark:text-neutral-200;
+}
