--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,6 +10,10 @@
   @apply block rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-accent sm:text-sm sm:leading-6 dark:bg-neutral-800/50 dark:placeholder:text-neutral-300 dark:text-neutral-200;
 }
 
+.dh-check {
+  @apply h-4 w-4 rounded border-gray-300 text-accent bg-gray-100 border-gray-300 rounded focus:ring-accent focus:ring-2 disabled:text-gray-300 disabled:bg-gray-300 dark:disabled:bg-neutral-500 dark:bg-neutral-300;
+}
+
 .dh-select .dh-select__control {
   @apply bg-white dark:bg-neutral-800/50 rounded-md shadow-sm;
 }
