--- a/client/src/app/globals.scss
+++ b/client/src/app/globals.scss
@@ -14,6 +14,10 @@
   @apply h-4 w-4 rounded border-gray-300 text-accent bg-gray-100 border-gray-300 rounded focus:ring-accent focus:ring-2 disabled:text-gray-300 disabled:bg-gray-300 dark:disabled:bg-neutral-500 dark:bg-neutral-300;
 }
 
+.dh-btn {
+  @apply rounded px-2 py-1 bg-accent text-white;
+}
+
 .dh-select .dh-select__control {
   @apply bg-white dark:bg-neutral-800/50 rounded-md shadow-sm;
 }
