--- a/client/src/app/globals.scss
+++ b/client/src/app/globals.scss
@@ -18,6 +18,10 @@
   @apply rounded px-2 py-1 bg-accent text-white;
 }
 
+.dh-err {
+  @apply text-red-600 mt-2 font-semibold dark:text-red-400;
+}
+
 #qrcode-scanner-react-div {
   @apply dark:text-neutral-200;
 
